adding jen's small comments and a core-envelope coupling section

--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,5 +1,8 @@
 This work was partly developed at the 2019 KITP conference `Better stars,
 better planets'.
+This research was supported in part by the National Science Foundation under
+Grant No. NSF PHY-1748958.
+
 Parts of this project are based on ideas explored at the Gaia sprints at the
 Flatiron Institute in New York City, 2016 and MPIA, Heidelberg, 2017.
 
