--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -201,6 +201,159 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{endal1981,
+       author = {{Endal}, A.~S. and {Sofia}, S.},
+        title = "{Rotation in solar-type stars. I - Evolutionary models for the spin-down of the sun}",
+      journal = {\apj},
+     keywords = {Main Sequence Stars, Solar Rotation, Stellar Evolution, Stellar Models, Stellar Rotation, Abundance, Angular Momentum, Convective Flow, Radiative Transfer, Solar Wind, Stellar Structure, Solar Physics},
+         year = 1981,
+        month = jan,
+       volume = {243},
+        pages = {625-640},
+          doi = {10.1086/158628},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1981ApJ...243..625E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{oglethorpe2013,
+       author = {{Oglethorpe}, R.~L.~F. and {Garaud}, P.},
+        title = "{Spin-down Dynamics of Magnetized Solar-type Stars}",
+      journal = {\apj},
+     keywords = {magnetohydrodynamics: MHD, Sun: interior, Sun: magnetic fields, Sun: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = dec,
+       volume = {778},
+       number = {2},
+          eid = {166},
+        pages = {166},
+          doi = {10.1088/0004-637X/778/2/166},
+archivePrefix = {arXiv},
+       eprint = {1401.0932},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...778..166O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{brun2011,
+       author = {{Brun}, Allan Sacha and {Miesch}, Mark S. and {Toomre}, Juri},
+        title = "{Modeling the Dynamical Coupling of Solar Convection with the Radiative Interior}",
+      journal = {\apj},
+     keywords = {convection, Sun: interior, Sun: oscillations, Sun: rotation, turbulence, waves},
+         year = 2011,
+        month = dec,
+       volume = {742},
+       number = {2},
+          eid = {79},
+        pages = {79},
+          doi = {10.1088/0004-637X/742/2/79},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJ...742...79B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{spada2010,
+       author = {{Spada}, F. and {Lanzafame}, A.~C. and {Lanza}, A.~F.},
+        title = "{A semi-analytic approach to angular momentum transport in stellar radiative interiors}",
+      journal = {\mnras},
+     keywords = {MHD, methods: analytical, methods: numerical, stars: late-type, stars: magnetic fields, stars: rotation},
+         year = 2010,
+        month = may,
+       volume = {404},
+       number = {2},
+        pages = {641-660},
+          doi = {10.1111/j.1365-2966.2010.16325.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.404..641S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{talon2003,
+       author = {{Talon}, S. and {Charbonnel}, C.},
+        title = "{Angular momentum transport by internal gravity waves. I - Pop I main sequence stars}",
+      journal = {\aap},
+     keywords = {hydrodynamics, stars: interiors, stars: late-type, stars: rotation, turbulence, stars: abundances, Astrophysics},
+         year = 2003,
+        month = jul,
+       volume = {405},
+        pages = {1025-1032},
+          doi = {10.1051/0004-6361:20030672},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0305151},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003A&A...405.1025T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{spruit2002,
+       author = {{Spruit}, H.~C.},
+        title = "{Dynamo action by differential rotation in a stably stratified stellar interior}",
+      journal = {\aap},
+     keywords = {MAGNETOHYDRODYNAMICS (MHD), STARS: MAGNETIC FIELDS, INSTABILITIES, Astrophysics},
+         year = 2002,
+        month = jan,
+       volume = {381},
+        pages = {923-932},
+          doi = {10.1051/0004-6361:20011465},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0108207},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002A&A...381..923S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{ruediger1996,
+       author = {{Ruediger}, G. and {Kitchatinov}, L.~L.},
+        title = "{The Internal Solar Rotation in Its Spin-down History}",
+      journal = {\apj},
+     keywords = {SUN: INTERIOR, SUN: MAGNETIC FIELDS, SUN: ROTATION},
+         year = 1996,
+        month = aug,
+       volume = {466},
+        pages = {1078},
+          doi = {10.1086/177577},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...466.1078R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{charbonneau1993,
+       author = {{Charbonneau}, P. and {MacGregor}, K.~B.},
+        title = "{Angular Momentum Transport in Magnetized Stellar Radiative Zones. II. The Solar Spin-down}",
+      journal = {\apj},
+     keywords = {MAGNETOHYDRODYNAMICS: MHD, STARS: INTERIORS, STARS: MAGNETIC FIELDS, STARS: ROTATION, SUN: INTERIOR},
+         year = 1993,
+        month = nov,
+       volume = {417},
+        pages = {762},
+          doi = {10.1086/173357},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1993ApJ...417..762C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{somers2016,
+       author = {{Somers}, Garrett and {Pinsonneault}, Marc H.},
+        title = "{Lithium Depletion is a Strong Test of Core-envelope Recoupling}",
+      journal = {\apj},
+     keywords = {stars: abundances, stars: rotation, stars: solar-type, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = sep,
+       volume = {829},
+       number = {1},
+          eid = {32},
+        pages = {32},
+          doi = {10.3847/0004-637X/829/1/32},
+archivePrefix = {arXiv},
+       eprint = {1606.00004},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...829...32S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{holmberg2009,
    author = {{Holmberg}, J. and {Nordstr{\"o}m}, B. and {Andersen}, J.},
     title = "{The Geneva-Copenhagen survey of the solar neighbourhood. III. Improved distances, ages, and kinematics}",
@@ -1118,24 +1271,6 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{gallet2013,
-       author = {{Gallet}, F. and {Bouvier}, J.},
-        title = "{Improved angular momentum evolution model for solar-like stars}",
-      journal = {\aap},
-     keywords = {stars: solar-type, stars: evolution, stars: rotation, stars: mass-loss, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
-         year = "2013",
-        month = "Aug",
-       volume = {556},
-          eid = {A36},
-        pages = {A36},
-          doi = {10.1051/0004-6361/201321302},
-archivePrefix = {arXiv},
-       eprint = {1306.2130},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...556A..36G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{brown2011,
        author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
          {Esquerdo}, Gilbert A.},
@@ -1470,6 +1605,155 @@ archivePrefix = {arXiv},
        eprint = {1608.03917},
  primaryClass = {astro-ph.SR},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...831...11S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{denissenkov2010,
+       author = {{Denissenkov}, Pavel A. and {Pinsonneault}, Marc and
+         {Terndrup}, Donald M. and {Newsham}, Grant},
+        title = "{Angular Momentum Transport in Solar-type Stars: Testing the Timescale for Core-Envelope Coupling}",
+      journal = {\apj},
+     keywords = {stars: evolution, stars: interiors, Sun: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2010,
+        month = jun,
+       volume = {716},
+       number = {2},
+        pages = {1269-1287},
+          doi = {10.1088/0004-637X/716/2/1269},
+archivePrefix = {arXiv},
+       eprint = {0911.1121},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...716.1269D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{gallet2013,
+       author = {{Gallet}, F. and {Bouvier}, J.},
+        title = "{Improved angular momentum evolution model for solar-like stars}",
+      journal = {\aap},
+     keywords = {stars: solar-type, stars: evolution, stars: rotation, stars: mass-loss, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = aug,
+       volume = {556},
+          eid = {A36},
+        pages = {A36},
+          doi = {10.1051/0004-6361/201321302},
+archivePrefix = {arXiv},
+       eprint = {1306.2130},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...556A..36G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{macgregor1991,
+       author = {{MacGregor}, K.~B. and {Brenner}, M.},
+        title = "{Rotational Evolution of Solar-Type Stars. I. Main-Sequence Evolution}",
+      journal = {\apj},
+     keywords = {Magnetic Stars, Main Sequence Stars, Stellar Evolution, Stellar Interiors, Stellar Rotation, Stellar Winds, Angular Momentum, Angular Velocity, Momentum Transfer, Stellar Magnetic Fields, Stellar Models, Astrophysics, STARS: EVOLUTION, STARS: INTERIORS, STARS: MAGNETIC, STARS: ROTATION, STARS: WINDS},
+         year = 1991,
+        month = jul,
+       volume = {376},
+        pages = {204},
+          doi = {10.1086/170269},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1991ApJ...376..204M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reiners2012,
+       author = {{Reiners}, Ansgar and {Mohanty}, Subhanjoy},
+        title = "{Radius-dependent Angular Momentum Evolution in Low-mass Stars. I}",
+      journal = {\apj},
+     keywords = {stars: low-mass, stars: magnetic field, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2012,
+        month = feb,
+       volume = {746},
+       number = {1},
+          eid = {43},
+        pages = {43},
+          doi = {10.1088/0004-637X/746/1/43},
+archivePrefix = {arXiv},
+       eprint = {1111.7071},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...746...43R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{lanzafame2015,
+       author = {{Lanzafame}, A.~C. and {Spada}, F.},
+        title = "{Rotational evolution of slow-rotator sequence stars}",
+      journal = {\aap},
+     keywords = {stars: rotation, stars: evolution, stars: late-type, open clusters and associations: general, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = dec,
+       volume = {584},
+          eid = {A30},
+        pages = {A30},
+          doi = {10.1051/0004-6361/201526770},
+archivePrefix = {arXiv},
+       eprint = {1506.05298},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...584A..30L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{spada2011,
+       author = {{Spada}, F. and {Lanzafame}, A.~C. and {Lanza}, A.~F. and {Messina}, S. and
+         {Collier Cameron}, A.},
+        title = "{Modelling the rotational evolution of solar-like stars: the rotational coupling time-scale}",
+      journal = {\mnras},
+     keywords = {methods: numerical, stars: interiors, stars: late-type, stars: pre-main-sequence, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2011,
+        month = sep,
+       volume = {416},
+       number = {1},
+        pages = {447-456},
+          doi = {10.1111/j.1365-2966.2011.19052.x},
+archivePrefix = {arXiv},
+       eprint = {1105.3125},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011MNRAS.416..447S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{bouvier2008,
+       author = {{Bouvier}, J.},
+        title = "{Lithium depletion and the rotational history of exoplanet host stars}",
+      journal = {\aap},
+     keywords = {planetary systems: formation, stars: rotation, stars: abundances, stars: pre-main sequence, accretion, accretion disks, hydrodynamics, Astrophysics},
+         year = 2008,
+        month = oct,
+       volume = {489},
+       number = {3},
+        pages = {L53-L56},
+          doi = {10.1051/0004-6361:200810574},
+archivePrefix = {arXiv},
+       eprint = {0808.3917},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008A&A...489L..53B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{irwin2007,
+       author = {{Irwin}, Jonathan and {Hodgkin}, Simon and {Aigrain}, Suzanne and
+         {Hebb}, Leslie and {Bouvier}, Jerome and {Clarke}, Cathie and
+         {Moraux}, Estelle and {Bramich}, D.~M.},
+        title = "{The Monitor project: rotation of low-mass stars in the open cluster NGC2516}",
+      journal = {\mnras},
+     keywords = {techniques: photometric, surveys, stars: rotation, open clusters and associations: individual: NGC2516, Astrophysics},
+         year = 2007,
+        month = may,
+       volume = {377},
+       number = {2},
+        pages = {741-758},
+          doi = {10.1111/j.1365-2966.2007.11640.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0702518},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007MNRAS.377..741I},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
