--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -4,7 +4,7 @@
 
 Stars with significant convective envelopes ($\lesssim$ 1.3 M$_\odot$) have
 strong magnetic fields and slowly lose angular momentum via magnetic braking
-\citep[\eg][]{schatzman1962, weber1967, skumanich1972, kawaler1988,
+\citep[\eg][]{schatzman1962, weber1967, kraft1967, skumanich1972, kawaler1988,
 pinsonneault1989}.
 Although stars are born with random rotation periods, between 1 and 10 days,
 observations of young open clusters reveal that their rotation periods
