--- a/paper/results.tex
+++ b/paper/results.tex
@@ -23,7 +23,8 @@ stars with Galactic latitude $<$ 15\degrees.
   \caption{
     Top: Rotation period vs effective temperature for stars in the \mct\
     sample, colored by the velocity dispersions of stars calculated over a
-    grid in $\log_{10}$(period) and \teff.
+    grid in $\log_{10}$(period) and \teff\ (this grid causes the quantized
+    appearance).
     Black lines show gyrochrones from a gyrochronology model that projects the
     rotation-color relation of
     Praesepe to longer rotation periods over time \citep{angus2019}.
@@ -39,7 +40,7 @@ stars with Galactic latitude $<$ 15\degrees.
     \citep{spada2019}.
     Qualitatively, these gyrochrones reflect the evolution of field
     stars at long rotation periods/old ages: they trace lines of constant
-    velocity dispersion by reproducing periods of `stalled' rotational
+    velocity dispersion by reproducing periods of `stalled' surface rotational
     evolution for K-dwarfs.
 }
   \centering
@@ -92,10 +93,10 @@ type ranging from late G to late K ($\sim$5500-3500 K) follow a braking law
 that changes over time.
 In particular, the relationship between rotation period and effective
 temperature appears to flatten out and eventually invert.
-These results provide further evidence for `stalled' rotational evolution of K
-dwarfs, like that observed in open clusters \citep{curtis2019} and reproduced
-by models that vary angular momentum transport between stellar core and
-envelope with time and mass \citep{spada2019}.
+These results provide further evidence for `stalled' surface rotational
+evolution of K dwarfs, like that observed in open clusters \citep{curtis2019}
+and reproduced by models that vary angular momentum transport between stellar
+core and envelope with time and mass \citep{spada2019}.
 The velocity dispersions of stars in the \mct\ sample provide the following
 picture of rotational evolution.
 At young ages \citep[younger than around 1 Gyr but still old enough to be on
@@ -124,8 +125,37 @@ Angular momentum resurfaces and prevents the stellar envelopes from
 spinning-down rapidly, and this effect is strongest for late K-dwarfs with
 effective temperatures of $\sim$4000-4500K and masses $\sim$0.5-0.7 M$_\odot$.
 
-It has been demonstrated that lower-mass stars remain magnetically active
-longer than more massive stars, \citep[\eg][]{west2008, kiman2019}.
+A period of core-envelope decoupling in the evolution of cool dwarfs has been
+explored in theoretical models for decades \citep[\eg][]{endal1981,
+macgregor1991, denissenkov2010, gallet2013}.
+In such models, the angular momenta of the radiative core and convective
+envelope are permitted to evolve separately once a radiative core develops on
+the pre-main sequence.
+A core-envelope decoupling phase in the early angular momentum history of
+stars is required in order to reproduce observations of young clusters and
+star forming regions \citep[\eg][]{irwin2007, bouvier2008, denissenkov2010,
+spada2011, reiners2012} and has become an established element of theoretical
+gyrochronology models.
+The \citet{lanzafame2015} gyrochronology model quantified the mass-dependence
+of the core-envelope coupling timescale and this model was fit to open-cluster
+observations in \citet{spada2019}, including new rotation period measurements
+for stars down to M$\sim$0.6M$_\odot$ in the NGC 6811 cluster
+\citep{curtis2019}.
+A similar mass-dependent core-envelope coupling timescale was also found to
+explain the observed lithium depletion trends in open clusters by an
+independent study \citep{somers2016}.
+Although variable angular momentum transport between the surfaces and cores of
+stars has been an essential ingredient of stellar evolution models for
+decades, the transport mechanism is still unknown.
+Among the proposed mechanisms are magneto-hydrodynamical waves resulting from
+various magnetic field geometries, and gravity waves \citep[see,
+\eg][]{charbonneau1993, ruediger1996, spruit2002, talon2003, spada2010,
+brun2011, oglethorpe2013}.
+
+Figure \ref{fig:vplot} reveals another phenomenon of magnetic evolution:
+K and M dwarfs remain magnetically active for longer than G dwarfs.
+The mass dependence of magnetic activity lifetimes has been demonstrated
+previously \citep[\eg][]{west2008, newton2017, kiman2019}.
 If the detectability of a rotation period is considered to be a magnetic
 activity proxy, then our results provide further evidence for a mass-dependent
 activity lifetime.
