--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -13,7 +13,8 @@ the {\it same rate} or faster than late-K dwarfs of the same age.
 This result agrees qualitatively with semi-empirical models that vary the rate
 of surface-to-core angular momentum transport as a function of time and mass.
 It also aligns with recent observations of stars in the NGC 6811 cluster,
-which indicate that K dwarfs experience an epoch of stalled spin-down.
+which indicate that the surface rotation rates of K dwarfs go through an epoch
+of inhibited evolution.
 We find that the oldest \kepler\ stars with measured rotation periods are
 late-K and early-M dwarfs, indicating that these stars maintain spotted
 surfaces and stay magnetically active longer than more massive stars.
