--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -18,8 +18,8 @@ barnes2010, meibom2011, meibom2015}.
 However, new photometric rotation periods made available by the \kepler\
 \citep{borucki2010} and \ktwo\ \citep{howell2014} missions
 \citep[\eg][]{mcquillan2014, garcia2014, douglas2017, rebull2017, meibom2011,
-meibom2015, curtis2019} have revealed that rotational evolution is more
-complicated than previously thought.
+meibom2015, curtis2019} confirm that rotational evolution is a highly complex
+process.
 For example, the early-to-mid M dwarfs in the $\sim$ 650 Myr Praesepe cluster
 spin more slowly than the G dwarfs; in theory because lower-mass stars have
 deeper convective zones which generate stronger magnetic fields and more
