--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -95,9 +95,9 @@
     Adrian M. Price-Whelan$^2$,  % signed off
     Jason Curtis$^1$,  % signed off
     Travis Berger$^6$,  % signed off
-    Elisabeth Newton$^5$,
-    Jennifer van Saders$^6$,
-    Rocio Kiman$^7$,
+    Elisabeth Newton$^5$,  % signed off
+    Jennifer van Saders$^6$,  % signed off
+    Rocio Kiman$^{7, 1}$,  % signed off
     Dan Foreman-Mackey$^2$,  % signed off
     Yuxi Lu$^{1, 3}$,  % signed off
     Lauren Anderson$^8$}  % signed off
