--- a/paper/results.tex
+++ b/paper/results.tex
@@ -105,18 +105,18 @@ sequence ][]{barnes2003}, stellar rotation period {\it decreases} with {\it
 increasing} mass.
 This is likely because lower-mass stars with deeper convection zones have
 stronger magnetic fields, larger Alfv\'en radii and therefore experience
-greater angular momentum loss rate \citep[\eg][]{schatzman1962, parker1970,
-kawaler1988, charbonneau2010}.
-According to the \citet{spada2019} model, there is minimal transportation of
-angular momentum from the surface to the core of the star at these young ages,
-so the surface slows down but the core keeps spinning rapidly.
+greater angular momentum loss rate \citep[\eg][]{schatzman1962, kraft1967,
+parker1970, kawaler1988, charbonneau2010}.
 This aligns with the current assumptions about stellar spin-down, dynamo
 theory, and the gyrochronology paradigm that has been in place for decades
 \citep[\eg][]{skumanich1972, noyes1984, kawaler1988, barnes2003, angus2019}.
-According to the data presented in figure \ref{fig:vplot} however, at
-intermediate ages, the rotation periods of K dwarfs appear {\it constant} with
-mass, and at late ages rotation period {\it increases} with {\it increasing}
-mass.
+According to the \citet{spada2019} model, the radiative cores and convective
+envelopes of stars are decoupled at these young ages, \ie\ transportation of
+angular momentum from the surface to the core of the star is reduced, so the
+surface slows down due to wind-braking but the core keeps spinning rapidly.
+According to the data presented in figure \ref{fig:vplot}, at intermediate
+ages, the rotation periods of K dwarfs appear {\it constant} with mass, and at
+late ages rotation period {\it increases} with {\it increasing} mass.
 The interpretation of this, according to the \citet{spada2019} model, is that
 lower-mass stars are still braking more efficiently at these intermediate and
 old ages but their cores are more tightly coupled to their envelopes, allowing
